# aesthetic-indexer

./: .gitignore  API_SETUP.md  CLIP_EXTRACTION_POLICY.md  README.md  project-scope.md  pyproject.toml
migrations/: 001_initial_schema.sql  002_add_entities.sql
models/: README.md
prompts/: aesthetic_tags.txt  camera_roll_tags.txt
scripts/: __init__.py  compute_signals.py  detect_shots.py  extract_clips.py  extract_entities.py  extract_frames.py  ingest_db.py  scrape_archive.py  scrape_youtube.py  tag_audio.py  tag_visual.py
src/: __init__.py
src/api/: run_server.py  server.py
src/audio/: __init__.py  audio_tagger.py
src/db/: __init__.py  models.py  session.py
src/pipeline/: __init__.py  run_all.py
src/utils/: __init__.py  deduplication.py  ffmpeg.py  io.py  paths.py  video_discovery.py
src/vision/: __init__.py  clip_tagger.py  entity_extractor.py
